Implement listUserPhotos()
